<resources>
    <string name="app_name">Fotay</string>
    <string name="fotaylogo">FotayLogo</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="btn_iniciarsesion">Iniciar sesión</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="rep_contrasena">Repetir contraseña</string>
    <string name="NoRegistrado">¿No tienes una cuenta?<b><u> Regístrate</u></b></string>
    <string name="Si_Registrado">¿Ya tienes una cuenta?<b><u> Inicia sesión</u></b></string>
    <string name="btn_entrar">Entrar</string>

    <string name="home_fragment">Inicio</string>
    <string name="notif_fragment">Notificaciones</string>
    <string name="profile_fragment">Perfil</string>
    <string name="fav_fragment">Favoritos</string>
    <string name="title_activity_post">PostActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="description">Añade una descripción</string>
    <string name="publicar_imagen">Publicar imagen</string>
    <string name="sin_imagen">Sin imagen</string>
    <string name="options_menu_logout">Cerrar sesión</string>
    <string name="username">Nombre de usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>