<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <!--Campo: Nombre de usurario-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nom_usu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/nombre_de_usuario"
        android:inputType="text"
        android:textColorHint="@color/white"
        app:boxStrokeErrorColor="#D32F2F"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorTextColor="#D32F2F"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="#ffffff"
        app:boxStrokeColor="@color/text_input_edit_box_stroke_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_usu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="20"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Campo: Contraseña-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_contr"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:boxStrokeErrorColor="#D32F2F"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:errorContentDescription="@string/contrasena"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorTextColor="#D32F2F"
        app:helperText="Al menos 8 caracteres"
        app:helperTextTextColor="#858383"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="#ffffff"
        app:boxStrokeColor="@color/text_input_edit_box_stroke_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_contr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="50"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Campo: Contraseña 2-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_contr2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/rep_contrasena"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:boxStrokeErrorColor="#D32F2F"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:errorContentDescription="@string/contrasena"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorTextColor="#D32F2F"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="#ffffff"
        app:boxStrokeColor="@color/text_input_edit_box_stroke_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_contr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="50"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registrar"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="@dimen/corner_radius"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/btn_pressed"
            android:fontFamily="sans-serif-black"
            android:hapticFeedbackEnabled="true"
            android:text="@string/btn_entrar"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_si_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:editable="false"
            android:gravity="center_horizontal"
            android:text="@string/Si_Registrado"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>



</LinearLayout>